edited all the files and added the new styling for each of the code samples

--- a/command_line_basics.html
+++ b/command_line_basics.html
@@ -50,7 +50,7 @@ permalink: /tutorials/command_line_basics/
               The Utility or Command Name, The Flags or Options and The Argument(s). <br>
             </p>
             <div class="coding">
-              <h6 class="steps">$ ls -1 ~/Desktop</h6>
+              <h6 class="steps"><span class="accent">$</span>&nbsp; &nbsp; ls -1 ~/Desktop</h6>
             </div>
             <p class="tuts">Let's break each part down:</p>
             <p class="tuts">
@@ -79,7 +79,7 @@ permalink: /tutorials/command_line_basics/
               To get a list of all commands, type the following:<br>
             </p>
             <div class="coding">
-              <h6 class="steps">$ man command</h6>
+              <h6 class="steps"><span class="accent">$</span>&nbsp; &nbsp; man command</h6>
             </div>
             <p class="tuts">FYI: <span class="strong em">Man</span> means <span class="strong">manual</span>.</p>  
   				</dd>
