--- a/git_repo.html
+++ b/git_repo.html
@@ -143,7 +143,8 @@ permalink: /tutorials/git_repo/
             <div class="git-three-initiate"></div><br>
             <p class="tuts">
               From the repo's front page, choose the "Clone in Mac" button and it will launch the Github App, where you'll be able to manage 
-              all repos through the Gitbhub GUI. If you don't have the Github app, you'll be prompted to download it.            </p>            
+              all repos through the Gitbhub GUI. If you don't have the app, you'll be prompted to download it.
+            </p>            
           </dd>
           
           <dt><a href="#"><span>+</span> 6. Final Step: Create your Repository</a></dt>
