--- a/rollback.html
+++ b/rollback.html
@@ -7,7 +7,7 @@ permalink: /tutorials/rollback/
   <!--start content -->
   <div class="content clearfix">      
     <div class="cheat-sheets">   
-      <h1><span>Cloning into a new directory</span></h1>
+      <h1><span>Working with Repositories</span></h1>
         
   		<div class="column_one_half tutorials">          
         <div class="git-map git-one"></div>
@@ -32,11 +32,11 @@ permalink: /tutorials/rollback/
             
             <div class="coding">
               <h6 class="steps">
-                $ cd /newfolder<br>
-                $ git clone git@github.com:username/Project-Name.git<br>
-                $ git branch<br>
-                  * master<br>
-                remoteBranch<br>
+                <span class="accent">$</span>&nbsp &nbsp cd /newfolder<br>
+                <span class="accent">$</span>&nbsp &nbsp git clone git@github.com:username/Project-Name.git<br>
+                <span class="accent">$</span>&nbsp &nbsp git branch<br>
+                <span class="code">* master</span><br>
+                <span class="code">remoteBranch</span><br>
               </h6>
             </div>
           </dd>
@@ -53,7 +53,7 @@ permalink: /tutorials/rollback/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ git fetch<br>
+                <span class="accent">$</span>&nbsp &nbsp git fetch<br>
               </h6>
             </div>
   				</dd>
@@ -72,7 +72,7 @@ permalink: /tutorials/rollback/
           </p>
           <div class="coding">
             <h6 class="steps">
-              $ git pull origin master<br>
+              <span class="accent">$</span>&nbsp &nbsp git pull origin master<br>
             </h6>
           </div>
 					</dd>
