--- a/clone_pull.html
+++ b/clone_pull.html
@@ -7,7 +7,7 @@ permalink: /tutorials/clone_pull/
   <!--start content -->
   <div class="content clearfix">      
     <div class="cheat-sheets">   
-      <h1><span>Cloning into a new directory</span></h1>
+      <h1><span>Cloning into a New Directory</span></h1>
         
   		<div class="column_one_half tutorials">          
         <div class="git-map git-one"></div>
@@ -32,11 +32,11 @@ permalink: /tutorials/clone_pull/
             
             <div class="coding">
               <h6 class="steps">
-                $ cd /newfolder<br>
-                $ git clone git@github.com:username/Project-Name.git<br>
-                $ git branch<br>
-                  * master<br>
-                remoteBranch<br>
+                <span class="accent">$</span>&nbsp &nbsp cd /newfolder<br>
+                <span class="accent">$</span>&nbsp &nbsp git clone git@github.com:username/Project-Name.git<br>
+                <span class="accent">$</span>&nbsp &nbsp git branch<br>
+                <span class="code">* master</span><br>
+                <span class="code">remoteBranch</span><br>
               </h6>
             </div>
           </dd>
@@ -53,7 +53,7 @@ permalink: /tutorials/clone_pull/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ git fetch<br>
+                <span class="accent">$</span>&nbsp &nbsp git fetch<br>
               </h6>
             </div>
   				</dd>
@@ -72,7 +72,7 @@ permalink: /tutorials/clone_pull/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ git pull origin master<br>
+                <span class="accent">$</span>&nbsp &nbsp git pull origin master<br>
               </h6>
             </div>
 					</dd>
@@ -87,26 +87,26 @@ permalink: /tutorials/clone_pull/
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ git push remote_name branch_name><br>
+                <span class="accent">$</span>&nbsp &nbsp git push remote_name branch_name><br>
               </h6>
             </div>
             <p class="tuts">
-              A 'remote' repo with a destination of a push operation can be an URL or the name of a remote.
-              Typically URls contain info about the transport process and the address of the remote server,
+              A 'remote' repo with a destination of a push operation can be a URL or the name of a remote.
+              Typically URLs contain info about the transport process and the address of the remote server,
               and the path to the repo. You can think of 'git push' essentially the same command as 'git merge master'
-              from nside the remote repo. For example: 
+              from the inside of the remote repo. For example: 
             </p>
             <div class="coding">
               <h6 class="steps">
-                $ git checkout master<br>
-                $ git fetch origin master<br>
-                $ git checkout master<br>
+                <span class="accent">$</span>&nbsp &nbsp git checkout master<br>
+                <span class="accent">$</span>&nbsp &nbsp git fetch origin master<br>
+                <span class="accent">$</span>&nbsp &nbsp git push origin master<br>
               </h6>
             </div>
             <p class="tuts">
-              To stay in sync with a remote repo, git prevents you from overwriting the remote 'origin master' wiht a non-fast foward merge.
-              Basically it means git is forcing you to first download the origin master, then work loacally and then merge locally before
-              pushing back to the remote branch. We'll be pushing to both Github and Heroku in the next cheatsheet
+              To stay in sync with a remote repo, git prevents you from overwriting the remote 'origin master' with a non-fast forward merge.
+              Basically it means git is forcing you to first download the origin master, work locally and merge locally before
+              pushing back to the remote branch. We'll be pushing to both Github and Heroku in the next tutorial.
             </p>
 					</dd>
         </dl> <!--end of dl  -->
