udpated pages with slightly new styles and copy

--- a/git_repo.html
+++ b/git_repo.html
@@ -7,7 +7,7 @@ permalink: /tutorials/git_repo/
   <!--start content -->
   <div class="content clearfix">      
     <div class="cheat-sheets">   
-      <h1><span>Creating a Repo is Easy</span></h1>
+      <h1><span>How to Create a Repo</span></h1>
         
   		<div class="column_one_half tutorials">          
         <div class="git-map git-three"></div>
@@ -21,7 +21,7 @@ permalink: /tutorials/git_repo/
   				<dt><a href="#"><span>+</span> Initialize a Repo from an Existing Directory</a></dt>
   				<dd style="">
             <p class="tuts">
-              If you're starting from an existing project in Git, you need to go to that project's directory in the terminal.
+              <span class="strong em">If you're starting from an existing project</span> in Git, you need to go to that project's directory in the terminal.
               Go ahead and navigate into that directory with 'cd /name of directory'. Then type the following:
             </p>
             <div class="coding">
@@ -93,7 +93,7 @@ permalink: /tutorials/git_repo/
   				<dt><a href="#"><span>+</span> 1. Creating a 'Repo' on Github</a></dt>
   				<dd style="">
             <p class="tuts">
-              When you create a project on Github, you will need to clone this repo to your local repository.
+              <span class="strong em">When you create a project on Github</span>, you will need to clone this repo to your local repository.
               See the next Cheatsheet: <span class="strong em"><a href="/clone_a_repository_path">How to Clone a Git Repository</a></span>
               for info on how do this, after you've gone through the following steps.
             </p>
@@ -111,7 +111,7 @@ permalink: /tutorials/git_repo/
   				<dt><a href="#"><span>+</span> 2. Next, Name your 'Repo'</a></dt>
   				<dd style="">
             <p class="tuts">
-              Name your repository with a simple, easy to understand name. It will save you hours of guessing.
+              <span class="strong em">Name your repository</span> with a simple, easy to understand name. It will save you hours of guessing.
             </p>
             <div class="git-three-naming"></div>
 					</dd>
@@ -119,7 +119,7 @@ permalink: /tutorials/git_repo/
           <dt><a href="#"><span>+</span> 3. Okay, Now Describe your Project</a></dt>
   			  <dd style="">
             <p class="tuts">
-              Describing your project is optional but when working with others it's quite useful.
+              <span class="strong em">Describing your project</span> is optional but when working with others it's quite useful.
             </p>
             <div class="git-three-description"></div>
           </dd>
@@ -127,7 +127,7 @@ permalink: /tutorials/git_repo/
           <dt><a href="#"><span>+</span> 4. Make your Repo Public or Private</a></dt>
   			  <dd style="">
             <p class="tuts">
-              Simply check a radio button to activate the settings. Making projects Public means everyone 
+              <span class="strong em">Simply check a radio button</span> to activate the settings. Making projects Public means everyone 
               can see them, while making projects Private will require an invitation to others to see and join your 
               project - useful when you're working with clients.
             </p> 
@@ -137,7 +137,7 @@ permalink: /tutorials/git_repo/
           <dt><a href="#"><span>+</span> 5. Initializing the Repo with a README file</a></dt>
   			  <dd style="">
             <p class="tuts">
-              If you check the button "Initialize this repository with a README", this will allow you to 
+              <span class="strong em">If you check the button</span> "Initialize this repository with a README", this will allow you to 
               clone the repo from the command line, or from the repository's front page immediately.
             </p> 
             <div class="git-three-initiate"></div><br>
@@ -150,7 +150,7 @@ permalink: /tutorials/git_repo/
           <dt><a href="#"><span>+</span> 6. Final Step: Create your Repository</a></dt>
   			  <dd style="">
             <p class="tuts">
-              Then click the button and you're all done.
+              <span class="strong em">Then click the button</span> and you're all done.
             </p> 
             <div class="git-three-create"></div>
           </dd>
@@ -158,7 +158,7 @@ permalink: /tutorials/git_repo/
           <dt><a href="#"><span>+</span> Create a Repo Another Way - Step One</a></dt>
   			  <dd style="">
             <p class="tuts">
-              You can start at the command line and create your local repository first.
+              <span class="strong em">You can start at the command line</span> and create your local repository first.
             </p>
             <p class="tuts">
               Create your directory, install git and initialize your repo with a README file, where you describe your project, 
@@ -180,17 +180,17 @@ permalink: /tutorials/git_repo/
               </h6>
             </div>
             <p class="tuts"> 
-              Okay so here's what's happening:<br> 
-              mkdir (makes the directory) <br>
-              '~' (the tilde is your home directory, where the project will be nested)<br> 
-              '/Project-Folder' (is simply the name of the Project's folder)<br>
-              'cd/Project-Folder (changes the directory, now you're inside that folder) <br>
-              'git init' (initializes a git repository)<br> 
-              'touch README' (is the utility that creates the README file.)
+              Breaking down the syntax:<br> 
+              <span class="strong em">mkdir</span> makes the directory<br>
+              <span class="strong em">~</span> the tilde is your home directory, where the project will be nested<br> 
+              <span class="strong em">/Project-Folder</span> is simply the name of the Project's folder<br>
+              <span class="strong em">cd</span>/Project-Folder changes the directory, now you're inside that folder<br>
+              <span class="strong em">git init</span> initializes a git repository<br> 
+              <span class="strong em">touch README</span> is the utility that creates the README file
             </p>
             <p class="tuts"> 
-              Now open the new README file from a text editor, and add a greeting "Yay Railsbridge!"
-              Save it and close the file. You've added a file, time to commit that change!
+              Now open the new README file from a text editor, and add a greeting "Hello Railsbridge!"
+              Save it and close the file. You've added a comment and now you should commit that change!
             </p>
             <div class="coding">
               <h6 class="steps">
@@ -208,7 +208,7 @@ permalink: /tutorials/git_repo/
           <dt><a href="#"><span>+</span> Create a Repo Another Way - Step Two</a></dt>
   			  <dd style="">
             <p class="tuts">
-              Everything you've done so far has been local, which means nothing is on Github yet. Have your username handy, which
+              <span class="strong em">Everything you've done so far has been local</span>, which means nothing is on Github yet. Have your username handy, which
               is basicly the name of your account for this next step.
             </p>
             <p class="tuts">
