--- a/git.html
+++ b/git.html
@@ -7,7 +7,7 @@ permalink: /tutorials/git/
   <!--start content -->
   <div class="content clearfix">      
     <div class="cheat-sheets">   
-      <h1><span>Local & Remote Environments</span></h1>
+      <h1><span>Working with Local & Remote Environments</span></h1>
         
   		<div class="column_one_half tutorials">          
         <div class="git-map git-one"></div>
